[gd_scene load_steps=15 format=3 uid="uid://37evxehmwk7y"]

[ext_resource type="Script" path="res://game_over_panel.gd" id="1_74m2c"]
[ext_resource type="Texture2D" uid="uid://bmeef67ybshg5" path="res://scenes/ChatGPT Image Jul 29, 2025, 06_18_40 AM.png" id="2_hgmpp"]
[ext_resource type="FontFile" uid="uid://b2clys7lbyd3t" path="res://scenes/Kid Games.ttf" id="2_iih1v"]
[ext_resource type="Texture2D" uid="uid://1misolt5rykx" path="res://scenes/video-play-watch-player-black-icon-free-png-7017516949743594tmpczaclr.png" id="3_wi27y"]
[ext_resource type="Texture2D" uid="uid://c7my3t23ibnpi" path="res://c77814c6-0286-43bb-bc6f-5ca21e5a596a.png" id="4_7d24h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phwy2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xqme3"]
texture = ExtResource("2_hgmpp")
texture_margin_left = 33.0
texture_margin_right = 33.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxset"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 0.811765, 0, 1)
corner_radius_top_left = 13
corner_radius_top_right = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8tyv"]
draw_center = false
border_width_left = 11
border_width_top = 11
border_width_right = 11
border_width_bottom = 11
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 33
corner_radius_top_right = 33
corner_radius_bottom_right = 33
corner_radius_bottom_left = 33

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yak4s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n6yph"]
bg_color = Color(1, 0.356863, 0.243137, 1)
border_color = Color(0.121569, 0.729412, 0.901961, 1)
corner_radius_bottom_right = 21
corner_radius_bottom_left = 21

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q37w6"]
bg_color = Color(1, 0.356863, 0.243137, 1)
border_color = Color(0.121569, 0.729412, 0.901961, 1)
corner_radius_bottom_right = 21
corner_radius_bottom_left = 21

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_im4xa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kf5au"]
bg_color = Color(1, 0.811765, 0, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_left = 22

[node name="GameOverPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_74m2c")

[node name="Panel3" type="Panel" parent="."]
layout_mode = 2
offset_left = 168.0
offset_right = 317.0
offset_bottom = 468.0
theme_override_styles/panel = SubResource("StyleBoxFlat_phwy2")

[node name="Panel2" type="Panel" parent="."]
layout_mode = 2
offset_left = 172.0
offset_right = 314.0
offset_bottom = 468.0
theme_override_styles/panel = SubResource("StyleBoxTexture_xqme3")

[node name="PlayerIcon" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(218, 42)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_7d24h")

[node name="HighScoreIcon" type="Sprite2D" parent="."]
position = Vector2(156, 0)

[node name="DepthLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 57.0
offset_top = 41.0
offset_right = 141.0
offset_bottom = 75.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_pxset")
text = "300"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 87.0
offset_right = 465.0
offset_bottom = 460.0

[node name="DepthMap" type="Control" parent="ScrollContainer"]
layout_mode = 2

[node name="CoveredLine" type="Line2D" parent="ScrollContainer/DepthMap"]
z_index = 1
position = Vector2(156, 100)

[node name="DepthLine" type="Line2D" parent="ScrollContainer/DepthMap"]
position = Vector2(156, 0)

[node name="MinorTicks" type="Node2D" parent="ScrollContainer/DepthMap"]
position = Vector2(156, 0)

[node name="MajorTicks" type="Node2D" parent="ScrollContainer/DepthMap"]
position = Vector2(156, 0)

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 464.0
offset_right = 419.0
offset_bottom = 674.0
theme_override_styles/panel = SubResource("StyleBoxFlat_t8tyv")

[node name="GiveUpButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 121.0
offset_right = 352.0
offset_bottom = 199.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_iih1v")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_yak4s")
theme_override_styles/hover = SubResource("StyleBoxFlat_n6yph")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n6yph")
theme_override_styles/normal = SubResource("StyleBoxFlat_q37w6")
text = "GIVE UP"

[node name="RiseAgainButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 352.0
offset_bottom = 122.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_iih1v")
theme_override_font_sizes/font_size = 46
theme_override_styles/focus = SubResource("StyleBoxEmpty_im4xa")
theme_override_styles/hover = SubResource("StyleBoxFlat_kf5au")
theme_override_styles/pressed = SubResource("StyleBoxFlat_kf5au")
theme_override_styles/normal = SubResource("StyleBoxFlat_kf5au")
text = "RISE
 AGAIN !"
icon = ExtResource("3_wi27y")
expand_icon = true
